--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: 
+logo: pixlr-image-generator-afd0811b-c70c-4190-af73-f17a0df95edb.png
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
