--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,10 @@ url: https://just-the-docs.github.io
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  
+nav_external_links:
+  - title: Museo Jurásico Asturias
+    url: https://www.museojurasicoasturias.com/
+    hide_icon: false # set to true to hide the external link icon - defaults to false
+    opens_in_new_tab: true # set to true to open this link in a new tab - defaults to false
+
