--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,8 @@ nav_external_links:
     url: https://www.museojurasicoasturias.com/
     hide_icon: false # set to true to hide the external link icon - defaults to false
     opens_in_new_tab: true # set to true to open this link in a new tab - defaults to false
-
+ 
+  - title: 
+    url: https://www.nhm.ac.uk/discover/dinosaurs.html
+    hide_icon: false # set to true to hide the external link icon - defaults to false
+    opens_in_new_tab: true # set to true to open this link in a new tab - defaults to false
