--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: pixlr-image-generator-afd0811b-c70c-4190-af73-f17a0df95edb.png
+logo: sinosauropteryx-feathers-biggest-dinosaur-discoveies-full-width.jpg.thumb.1160.1160.jpg
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
