--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 logo: sinosauropteryx-feathers-biggest-dinosaur-discoveies-full-width.jpg.thumb.1160.1160.jpg
-Tittle: Dinosaurios
+tittle: Dinosaurios
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 favicon_ico: favicon.ico
