--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ favicon_ico: favicon.ico
 
 url: https://perperiv9.github.io/ivan_perperiv9.github.io/
 
+color_scheme: dark
+
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
   
